plugins {
    id 'groovy'
    id 'java'
}

group 'ura_rapidwright'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-Xlint:unchecked'
}

dependencies {
    compile 'org.codehaus.groovy:groovy-all:2.3.11'
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compile files('../RapidWright/build/libs/rapidwright.jar')
    compile files('deps/ini4j-0.5.4.jar')
    compile files('deps/commons-lang3-3.8.1.jar')
}
